--- a/glitch-art.html
+++ b/glitch-art.html
@@ -6,42 +6,81 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<nav class="navbar navbar-expand-sm text-bg-dark navbar-dark">
- <div class="container-fluid">
+<div class="container-fluid pt-3 pb-3">
+  <h1 class="text-center display-5">Olivia Joy's Portfolio</h1>
+</div>
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
   <ul class="navbar-nav">
- 	<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-	<li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
-	<li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme Mashup</a></li>
-    	<li class="nav-item"><a class="nav-link" href="minecraft-sculpture.html">Minecraft Sculpture</a></li>
-	<li class="nav-item"><a class="nav-link" href="3d-print.html">3D Print</a></li>
-    	<li class="nav-item"><a class="nav-link" href="net-art.html">Net.art</a></li>
+     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+     <li class="nav-item"><a class="nav-link active" href="glitch-art.html">Glitch</a></li>
+     <li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme</a></li>
+     <li class="nav-item"><a class="nav-link" href="minecraft-sculpture.html">Minecraft</a></li>
+     <li class="nav-item"><a class="nav-link" href="3d-print.html">3D Print</a></li>
+     <li class="nav-item"><a class="nav-link" href="net-art.html">Net.art</a></li>
   </ul> 
- </div>
 </nav>
 
-<div class="container-fluid pt-3 pb-3">
+<div class="container-fluid pt-3 pb-3 bg-74">
 
-<h1>Glitch Art</h1>
+  <h1 class="text-center">Glitch Art</h1>
 
-<p>
-Glitch Art is doing something unfamiliar with a piece of technology that you are familiar with. For example, I made the glitches below by taking the familiar .jpg image file and made changes to it using Audacity, which is an audio editor software, and TextEdit.
-</p>
+  <hr>
+  <p>
+  Glitch Art is doing something unfamiliar with a piece of technology that you are familiar with. I made the following glitches by taking the familiar .jpg image file and made changes to the image using Audacity and TextEdit. Audacity is an audio editing software and TextEdit is a text editing software.
+  </p>
 
-<p>
-This series of images are related through the theme of fast food. I choose images from In-N-Out, Carl's Jr, and McDonalds because these are some of my favorite fast food places. Fast food advertisements always show their burgers and other food as perfectly put together, and they make it look as appealing as possible.
+  <p>
+  This series of images are related through the theme of fast food. I choose images from In-N-Out, Carl's Jr, and McDonalds because these are some of my favorite fast food places. Fast food advertisements always show their burgers and other food as perfectly put together, and they make it look as appealing as possible.
 These glitches represent how the food in real life never actually looks like it does in the commercials. The glitch of fast food also represents the way that some people see fast food as unhealthy, but I left the images with a pleasing aesthetic because I personally still enjoy eating fast food anyway.
-</p>
+  </p>
+  <hr>
 
-<img src="images/glitch/carlsjr-glitch-food.png" alt="Carl's Jr food as a glitched image" style="height:400px">
-<img src="images/glitch/in-n-out-glitch-food.png" alt="In-N-Out food as a glitched image" style="height:400px">
-<img src="images/glitch/mcdonalds-glitch-food.png" alt="McDonald's food as a glitched image" style="height:400px">
-<img src="images/glitch/in-n-out-glitch-exterior.png" alt="In-N-Out exterior as a glitched image" style="height:400px">
-<img src="images/glitch/mcdonalds-glitch-exterior.png" alt="McDonalds exterior as a glitched image" style="height:400px">
-<img src="images/glitch/mcdonalds-bass-2-treble15-vol12.png" alt="McDonalds food as a glitched image, made with Audacity" style="height:400px">
-<img src="images/glitch/mcdonalds-reverb.png" alt="McDonalds food as a glitched image, made with reverb effect in Audacity" style="height:400px">
+  <div class="row pb-4">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-5">
+      <img src="images/glitch/mcdonalds-glitch-food.png" class="img-fluid" alt="McDonald's food as a glitched image">
+    </div>
+    <div class="col-sm-5">
+      <img src="images/glitch/in-n-out-glitch-food.png" class="img-fluid" alt="In-N-Out food as a glitched image">
+    </div>
+    <div class="col-sm-1"></div>
+  </div>
+
+  <div class="row pb-4">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-5">
+     <img src="images/glitch/carlsjr-glitch-food.png" class="img-fluid" alt="Carl's Jr food as a glitched image">
+    </div>
+    <div class="col-sm-5">
+      <img src="images/glitch/in-n-out-glitch-exterior.png" class="img-fluid" alt="In-N-Out exterior as a glitched image">
+    </div>
+    <div class="col-sm-1"></div>
+  </div>
+ 
+  <div class="row pb-4">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-5">
+     <img src="images/glitch/mcdonalds-reverb.png" class="img-fluid" alt="McDonalds food as a glitched image, made with reverb effect in Audacity">
+    </div>
+    <div class="col-sm-5">
+      <img src="images/glitch/mcdonalds-bass-2-treble15-vol12.png" class="img-fluid" alt="McDonalds food as a glitched image, made with Audacity">
+    </div>
+    <div class="col-sm-1"></div>
+  </div>
+ 
+  <div class="row pb-4">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-5">
+     <img src="images/glitch/mcdonalds-glitch-exterior.png" class="img-fluid" alt="McDonalds exterior as a glitched image">
+    </div>
+    <div class="col-sm-5"></div>
+    <div class="col-sm-1"></div>
+  </div>
 
 </div>
 
