--- a/3d-print.html
+++ b/3d-print.html
@@ -1,28 +1,63 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>3D Print - Olivia Joy</title>
+<title>3D Print | Olivia Joy</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>3D Print</h1>
+<div class="container-fluid pt-3 pb-3">
+  <h1 class="text-center display-5">Olivia Joy's Portfolio</h1>
+</div>
 
-<p>
-The objective of this project was to export the Minecraft Sculpture as an STL file and prepare it for a 3D Print using the printer's software by adding scaffolding where needed. A small print was first done as a draft to understand how the sculpture should be rebuilt, if it's needed. Then a final print was done much larger to show the details of the sculpture.
-</p>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
+  <ul class="navbar-nav">
+     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+     <li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
+     <li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme</a></li>
+     <li class="nav-item"><a class="nav-link" href="minecraft-sculpture.html">Minecraft</a></li>
+     <li class="nav-item"><a class="nav-link active" href="3d-print.html">3D Print</a></li>
+     <li class="nav-item"><a class="nav-link" href="net-art.html">Net.art</a></li>
+  </ul> 
+</nav>
 
-<p>
-My final print of the Iron man helmet took almost 7 hours and came out to be about 3 inches tall. To finish the piece, I removed the scaffolding, filed down the rough edges, and painted it.
-</p>
+<div class="container-fluid pt-3 pb-3 bg-74">
 
-<img src="images/3d/3d-ironman-helmet.png" alt="3D printed sculpture of Ironman's helmet" style="height:500px">
-<img src="images/3d/3d-ironman-helmet-rightside.png" alt="3D printed sculpture of Ironman's helmet, right side angle" style="height:500px">
-<img src="images/3d/3d-ironman-helmet-leftside.png" alt="3D printed sculpture of Ironman's helmet, left side angle" style="height:500px">
-<img src="images/3d/3d-ironman-helmet-draft-final.png" alt="3D final print of Ironman's helmet beside the small draft print" style="height:500px">
+  <h1 class="text-center">3D Print</h1>
 
-<p>
-<a href="index.html">Home page</a>
-</p>
+  <hr>
+  <p>
+  The objective of this project was to export the Minecraft Sculpture as an STL file using a software called Mineways and prepare it for a 3D Print using the printer's software. Using the 3D printer's software, I added scaffolding to the edges so that it had support underneath. I first did small print was as a draft to understand how the sculpture should be rebuilt better if needed. Then I did a final print which was much larger to show the details of the sculpture. My final print of the Iron man helmet took almost 7 hours and came out to be about 3 inches tall. To finish the piece, I removed the scaffolding, filed down the rough edges, and painted it with acrylic paint.
+  </p>
+  <hr>
+
+  <div class="row pb-4">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-5">
+      <img src="images/3d/3d-ironman-helmet.png" class="img-fluid" alt="3D printed sculpture of Ironman's helmet">
+    </div>
+    <div class="col-sm-5">
+      <img src="images/3d/3d-ironman-helmet-rightside.png" class="img-fluid" alt="3D printed sculpture of Ironman's helmet, right side angle">
+    </div>
+    <div class="col-sm-1"></div>
+  </div>
+
+  <div class="row pb-4">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-5">
+      <img src="images/3d/3d-ironman-helmet-leftside.png" class="img-fluid" alt="3D printed sculpture of Ironman's helmet, left side angle">
+    </div>
+    <div class="col-sm-5">
+      <img src="images/3d/3d-ironman-helmet-draft-final.png" class="img-fluid" alt="3D final print of Ironman's helmet beside the small draft print">
+    </div>
+    <div class="col-sm-1"></div>
+  </div>
+
+</div>
 
 </body>
 </html>
