--- a/index.html
+++ b/index.html
@@ -12,79 +12,77 @@
 <body>
 
 <div class="container-fluid pt-3 pb-3">
-
-<h1 class="text-center">Portfolio | Olivia Joy</h1>
-
+  <h1 class="text-center display-5">Olivia Joy's Portfolio</h1>
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
   <ul class="navbar-nav">
- 	<li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-	<li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
-	<li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme</a></li>
-    	<li class="nav-item"><a class="nav-link" href="minecraft-sculpture.html">Minecraft</a></li>
-	<li class="nav-item"><a class="nav-link" href="3d-print.html">3D Print</a></li>
-    	<li class="nav-item"><a class="nav-link" href="net-art.html">Net.art</a></li>
+     <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+     <li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
+     <li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme</a></li>
+     <li class="nav-item"><a class="nav-link" href="minecraft-sculpture.html">Minecraft</a></li>
+     <li class="nav-item"><a class="nav-link" href="3d-print.html">3D Print</a></li>
+     <li class="nav-item"><a class="nav-link" href="net-art.html">Net.art</a></li>
   </ul> 
 </nav>
 
-<div class="container-fluid pt-3 bg-74">
+<div class="container-fluid pt-3 bg-74 text-center">
 
-<h2>Art 74 Projects</h2>
+  <h1>Art 74 Projects</h1>
 
-<p>
-See my recent projects from my Digital Media Art class. Click each image to see more from that project.
-</p>
+  <p>
+  See my recent projects from my Digital Media Art class. Click each image to see more from that project.
+  </p>
 
-<div class="row pb-4">
-  <div class="col-sm-1"></div>
-  <div class="col-sm-5">
-	<a href="glitch-art.html">
-  	  <img src="images/glitch/in-n-out-glitch-exterior.png" class="img-fluid mx-auto d-block" alt="In-N-Out exterior glitched image">
-	</a>
+  <div class="row pb-4">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-5">
+      <a href="glitch-art.html">
+        <img src="images/glitch/in-n-out-glitch-exterior.png" class="img-fluid mx-auto d-block" alt="In-N-Out exterior glitched image">
+      </a>
+    </div>
+    <div class="col-sm-5">
+      <a href="meme-mashup.html">
+        <img src="images/meme/meme-mashup.png" class="img-fluid mx-auto d-block" alt="Mashup image of the evil Kermit, disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
+      </a>
+    </div>
+    <div class="col-sm-1"></div>
   </div>
-  <div class="col-sm-5">
-	<a href="meme-mashup.html">
-   	  <img src="images/meme/meme-mashup.png" class="img-fluid mx-auto d-block" alt="Mashup image of the evil Kermit, disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
-	</a>
-  </div>
-  <div class="col-sm-1"></div>
-</div>
 
-<div class="row pb-4">
-  <div class="col-sm-1"></div>
-  <div class="col-sm-5">
-	<a href="minecraft-sculpture.html">
-   	  <img src="images/minecraft/ironman-left-angle.png" class="img-fluid mx-auto d-block" alt="A sculpture made in Minecraft of Ironman's helmet">
-	</a>
+  <div class="row pb-4">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-5">
+      <a href="minecraft-sculpture.html">
+        <img src="images/minecraft/ironman-left-angle.png" class="img-fluid mx-auto d-block" alt="A sculpture made in Minecraft of Ironman's helmet">
+      </a>
+    </div>
+    <div class="col-sm-5">
+      <a href="3d-print.html">
+        <img src="images/3d/3d-ironman-helmet.png" class="img-fluid mx-auto d-block" alt="3D printed sculpture of Ironman's helmet">
+      </a>
+    </div>
+    <div class="col-sm-1"></div>
   </div>
-  <div class="col-sm-5">
-	<a href="3d-print.html">
-	  <img src="images/3d/3d-ironman-helmet.png" class="img-fluid mx-auto d-block" alt="3D printed sculpture of Ironman's helmet">
-	</a>
-  </div>
-  <div class="col-sm-1"></div>
-</div>
 
-<div class="row pb-4">
-  <div class="col-sm-1"></div>
-  <div class="col-sm-5">
-	<a href="net-art.html">
-	  <img src="images/net-art/begin-your-adventure.png" class="img-fluid mx-auto d-block" alt="The first page of Olivia's Net art website. The page title is Begin Your Nature Adventure">
-	</a>
+  <div class="row pb-4">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-5">
+      <a href="net-art.html">
+        <img src="images/net-art/begin-your-adventure.png" class="img-fluid mx-auto d-block" alt="The first page of Olivia's Net art website. The page title is Begin Your Nature Adventure">
+      </a>
+    </div>
+    <div class="col-sm-5"></div>
+    <div class="col-sm-1"></div>
   </div>
-  <div class="col-sm-5"></div>
-  <div class="col-sm-1"></div>
-</div>
 
 </div>
 
 <div class="container-fluid pt-3 pb-3 text-bg-light">
 
-<h2>About Me</h2>
-<p>
-My name is Olivia Joy Cacdac and I am a Computer Science major at San Jose State University. I am also a beginner New Media Artist. Through my Intro to Digital Media Art class, I've had the opportunity to explore and create New Media Art using various tools, such as Adobe Photoshop and 3D printing softwares.
-</p>
+  <h2>About Me</h2>
+  <p>
+  My name is Olivia Joy Cacdac and I am a Computer Science major at San Jose State University. I am also a beginner New Media Artist. Through my Intro to Digital Media Art class, I've had the opportunity to explore and create New Media Art using various tools, such as Adobe Photoshop and 3D printing softwares.
+  </p>
 
 </div>
 
