--- a/meme-mashup.html
+++ b/meme-mashup.html
@@ -6,55 +6,61 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-<nav class="navbar navbar-expand-sm text-bg-dark navbar-dark">
- <div class="container-fluid">
+<div class="container-fluid pt-3 pb-3">
+  <h1 class="text-center display-5">Olivia Joy's Portfolio</h1>
+</div>
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
   <ul class="navbar-nav">
- 	<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-	<li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
-	<li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme Mashup</a></li>
-    	<li class="nav-item"><a class="nav-link" href="minecraft-sculpture.html">Minecraft Sculpture</a></li>
-	<li class="nav-item"><a class="nav-link" href="3d-print.html">3D Print</a></li>
-    	<li class="nav-item"><a class="nav-link" href="net-art.html">Net.art</a></li>
+     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+     <li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
+     <li class="nav-item"><a class="nav-link active" href="meme-mashup.html">Meme</a></li>
+     <li class="nav-item"><a class="nav-link" href="minecraft-sculpture.html">Minecraft</a></li>
+     <li class="nav-item"><a class="nav-link" href="3d-print.html">3D Print</a></li>
+     <li class="nav-item"><a class="nav-link" href="net-art.html">Net.art</a></li>
   </ul> 
- </div>
 </nav>
 
-<div class="container-fluid pt-3 pb-3">
+<div class="container-fluid pt-3 pb-3 bg-74">
 
-<h1>Meme Mashup</h1>
+  <h1 class="text-center">Meme Mashup</h1>
 
-<p>
-A meme mashup creates something new and meaningful from the source memes. Each individual meme used in the mashup has is own meaning and when combined, the mashup as a whole piece creates a new meaning. I used Adobe Photoshop to create the mashups.
-</p>
+  <hr>
+  <p>
+  A meme mashup creates something new and meaningful from the source memes. Each individual meme used in the mashup has is own meaning and when combined, the mashup as a whole piece creates a new meaning. I used Adobe Photoshop to create the mashups.
+  </p>
+  <hr>
 
-<div class="row pb-3">
-  <div class="col-sm-8">
-	<img src="images/meme/meme-mashup.png" class="img-fluid mx-auto d-block" alt="Mashup image of the evil Kermit, disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
+  <div class="row pb-3">
+    <div class="col-sm-8">
+      <img src="images/meme/meme-mashup.png" class="img-fluid mx-auto d-block" alt="Mashup image of the evil Kermit, disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
+    </div>
+    <div class="col-sm-4">The base of this mashup is the disaster girl meme, and she is now the evil Kermit. The Elmo on her shoulder is supporting her in the chaos of the fire while the regular Kermit watches the woman and Spongebob who just escaped the building.
+    </div>
   </div>
-  <div class="col-sm-4">The base of this mashup is the disaster girl meme, and she is now the evil Kermit. The Elmo on her shoulder is supporting her in the chaos of the fire while the regular Kermit watches the woman and Spongebob who just escaped the building.
+
+  <div class="row pb-3">
+    <div class="col-sm-8">
+      <img src="images/meme/meme-mashup1-2.png" class="img-fluid mx-auto d-block" alt="Mashup image of the disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
+    </div>
+    <div class="col-sm-4">A version of the above without the evil Kermit meme. Both Spongebob and the woman escape the fire. The woman wonders if the child is responsible for the fire. Rising Elmo in his element.
+    </div>
   </div>
+
+  <div class="row pb-3">
+    <div class="col-sm-8">
+      <img src="images/meme/meme-mashup3.png" class="img-fluid mx-auto d-block" alt="Mashup image of the woman squinting, suprised Pikachu, and the cat from the woman yelling at a cat meme">
+    </div>
+    <div class="col-sm-4">The cat and the suprised Pikachu look similar. The woman is trying to tell the difference between them.
+    </div>
+  </div>
+
 </div>
 
-<div class="row pb-3">
-  <div class="col-sm-8">
-	<img src="images/meme/meme-mashup1-2.png" class="img-fluid mx-auto d-block" alt="Mashup image of the disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
-  </div>
-  <div class="col-sm-4">A version of the above without the evil Kermit meme. Both Spongebob and the woman escape the fire. The woman wonders if the child is responsible for the fire. Rising Elmo in his element.
-  </div>
-</div>
-
-<div class="row pb-3">
-  <div class="col-sm-8">
-	<img src="images/meme/meme-mashup3.png" class="img-fluid mx-auto d-block" alt="Mashup image of the woman squinting, suprised Pikachu, and the cat from the woman yelling at a cat meme">
-  </div>
-  <div class="col-sm-4">The cat and the suprised Pikachu look similar. The woman is trying to tell the difference between them.
-  </div>
-</div>
-
-</div>
 </body>
 </html>
