--- a/minecraft-sculpture.html
+++ b/minecraft-sculpture.html
@@ -1,42 +1,99 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Minecraft Sculpture - Olivia Joy</title>
+<title>Minecraft Sculpture | Olivia Joy</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>Minecraft Sculpture</h1>
+<div class="container-fluid pt-3 pb-3">
+  <h1 class="text-center display-5">Olivia Joy's Portfolio</h1>
+</div>
 
-<p>
-The objective of this project was to use a virtual environment to design a sculpture representing an object of cultural significance. The sculpture was also created with the idea in mind that it would later be 3D printed.
-</p>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
+  <ul class="navbar-nav">
+     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+     <li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
+     <li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme</a></li>
+     <li class="nav-item"><a class="nav-link active" href="minecraft-sculpture.html">Minecraft</a></li>
+     <li class="nav-item"><a class="nav-link" href="3d-print.html">3D Print</a></li>
+     <li class="nav-item"><a class="nav-link" href="net-art.html">Net.art</a></li>
+  </ul> 
+</nav>
 
-<h2>Iron Man Helmet</h2>
+<div class="container-fluid pt-3 pb-3 bg-74">
 
-<p>
-I created a sculpture of the Iron Man helmet because it represents Marvel, which I am a big fan of. It is culturally significant because many people around the world have grown up watching the Marvel movies and/or reading the comic books. Marvel has been a big influence in pop culture, and it continues to be as they release new movies and shows.
-</p>
+  <h1 class="text-center">Minecraft Sculpture</h1>
 
-<img src="images/minecraft/ironman-helmet-mc.png" alt="Minecraft sculpture of Ironman's helmet" style="height:500px">
-<img src="images/minecraft/ironman-right-angle.png" alt="Minecraft sculpture of Ironman's helmet, right side angle" style="height:500px">
-<img src="images/minecraft/ironman-left-angle.png" alt="Minecraft sculpture of Ironman's helmet, left side angle" style="height:500px">
-<img src="images/minecraft/ironman-above-angle.png" alt="Minecraft sculpture of Ironman's helmet, above angle" style="height:500px">
+  <hr>
+  <p>
+  The objective of this project was to use a virtual environment to design a sculpture representing an object of cultural significance. The sculpture was also created with the idea in mind that it would later be 3D printed.
+  </p>
+  <hr>
 
-<h2>Baby Groot</h2>
+  <h2>Iron Man Helmet</h2>
 
-<p>
-I built this sculpture of Baby Groot from Guardians of the Galaxy Vol. 2 because it was another way to represent Marvel. Moveover, the cultural significance of Baby Groot is about how his adorablness from the movie captured many people's attention.
-</p>
+  <p>
+  I created a sculpture of the Iron Man helmet because it represents Marvel, which I am a big fan of. It is culturally significant because many people around the world have grown up watching the Marvel movies and/or reading the comic books. Marvel has been a big influence in pop culture, and it continues to be as they release new movies and shows.
+  </p>
 
-<img src="images/minecraft/baby-groot-sculpture.png" alt="Minecraft sculpture of Baby Groot" style="height:500px">
-<img src="images/minecraft/baby-groot-right-angle.png" alt="Minecraft sculpture of Baby Groot, right side angle" style="height:500px">
-<img src="images/minecraft/baby-groot-left-angle.png" alt="Minecraft sculpture of Baby Groot, left side angle" style="height:500px">
-<img src="images/minecraft/baby-groot-above-angle.png" alt="Minecraft sculpture of Baby Groot, above angle" style="height:500px">
+  <div class="row pb-4">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-5">
+      <img src="images/minecraft/ironman-helmet-mc.png" class="img-fluid" alt="Minecraft sculpture of Ironman's helmet">
+    </div>
+    <div class="col-sm-5">
+      <img src="images/minecraft/ironman-left-angle.png" class="img-fluid" alt="Minecraft sculpture of Ironman's helmet, left side angle">
+    </div>
+    <div class="col-sm-1"></div>
+  </div>
 
+  <div class="row pb-4">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-5">
+      <img src="images/minecraft/ironman-right-angle.png" class="img-fluid" alt="Minecraft sculpture of Ironman's helmet, right side angle">
+    </div>
+    <div class="col-sm-5">
+      <img src="images/minecraft/ironman-above-angle.png" class="img-fluid" alt="Minecraft sculpture of Ironman's helmet, above angle">
+    </div>
+    <div class="col-sm-1"></div>
+  </div>
 
-<p>
-<a href="index.html">Home page</a>
-</p>
+  <hr>
+
+  <h2>Baby Groot</h2>
+
+  <p>
+  I built this sculpture of Baby Groot from Guardians of the Galaxy Vol. 2 because it was another way to represent Marvel. Moveover, the cultural significance of Baby Groot is about how his adorablness from the movie captured many people's attention.
+  </p>
+
+  <div class="row pb-4">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-5">
+      <img src="images/minecraft/baby-groot-sculpture.png" class="img-fluid" alt="Minecraft sculpture of Baby Groot">
+    </div>
+    <div class="col-sm-5">
+      <img src="images/minecraft/baby-groot-left-angle.png" class="img-fluid" alt="Minecraft sculpture of Baby Groot, left side angle">
+    </div>
+    <div class="col-sm-1"></div>
+  </div>
+
+  <div class="row pb-4">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-5">
+      <img src="images/minecraft/baby-groot-right-angle.png" class="img-fluid" alt="Minecraft sculpture of Baby Groot, right side angle">
+    </div>
+    <div class="col-sm-5">
+      <img src="images/minecraft/baby-groot-above-angle.png" class="img-fluid" alt="Minecraft sculpture of Baby Groot, above angle">
+    </div>
+    <div class="col-sm-1"></div>
+  </div>
+
+</div>
 
 </body>
 </html>
