--- a/net-art.html
+++ b/net-art.html
@@ -1,33 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Net Art - Olivia Joy</title>
+<title>Net Art | Olivia Joy</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>Net.art</h1>
+<div class="container-fluid pt-3 pb-3">
+  <h1 class="text-center display-5">Olivia Joy's Portfolio</h1>
+</div>
 
-<p>
-The objective of this project was to create a series of pages with links, text, and images to tell a story or experience in a poetic, modern, hypertext way.
-</p>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
+  <ul class="navbar-nav">
+     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+     <li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
+     <li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme</a></li>
+     <li class="nav-item"><a class="nav-link" href="minecraft-sculpture.html">Minecraft</a></li>
+     <li class="nav-item"><a class="nav-link active" href="3d-print.html">3D Print</a></li>
+     <li class="nav-item"><a class="nav-link" href="net-art.html">Net.art</a></li>
+  </ul> 
+</nav>
 
-<p>
-My website is a fun little experience with nature. It shows that different paths can led you to different parts of nature, where there will be various things to see. The idea is that you can choose to look around and explore your surroundings wherever you are in nature to see what it has to offer.
-</p>
+<div class="container-fluid pt-3 pb-3 bg-74">
 
-<p>
-<a href="https://oliviajoyyy.github.io/">See my Net.art here</a>
-</p>
+  <h1 class="text-center">Net.art</h1>
 
-<p>Preview screenshots of the first two pages on my Net art site:</p>
+  <p>
+  The objective of this project was to create a series of pages with links, text, and images to tell a story or experience in a poetic, modern, hypertext way. My website is a fun little experience with nature. It shows that different paths can led you to different parts of nature, where there will be various things to see. The idea is that you can choose to look around and explore your surroundings wherever you are in nature to see what it has to offer.
+  </p>
 
-<img src="images/net-art/begin-your-adventure.png" alt="The first page of Olivia's Net art website. The page title is Begin Your Nature Adventure" style="height:500px">
+  <p>
+  Below are preview screenshots of the first two pages of my Net art. Visit my Net art site at <a href="net-art-74/index.html">https://oliviajoyyy.github.io/net-art-74/</a>
+  </p>
 
-<img src="images/net-art/2-way-path.png" alt="The second page of Olivia's Net art website. The page title is Choose Your Path" style="height:500px">
+  <div class="row pb-4">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-5">
+      <img src="images/net-art/begin-your-adventure.png" class="img-fluid" alt="The first page of Olivia's Net art website. The page title is Begin Your Nature Adventure">
+    </div>
+    <div class="col-sm-5">
+      <img src="images/net-art/2-way-path.png" class="img-fluid" alt="The second page of Olivia's Net art website. The page title is Choose Your Path">
+    </div>
+    <div class="col-sm-1"></div>
+  </div>
 
-<p>
-<a href="index.html">Home page</a>
-</p>
+</div>
 
 </body>
 </html>
