--- a/3d-print.html
+++ b/3d-print.html
@@ -57,6 +57,17 @@
     <div class="col-sm-1"></div>
   </div>
 
+  <div class="row pb-4">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-5">
+      <img src="images/3d/ironman-stl-right-angle.png" class="img-fluid" alt="STL image of the Ironman sculpture, right side angle">
+    </div>
+    <div class="col-sm-5">
+      <img src="images/3d/ironman-flashprint.png" class="img-fluid" alt="the Ironman sculpture in the flashprint software">
+    </div>
+    <div class="col-sm-1"></div>
+  </div>
+
 </div>
 
 </body>
