--- a/net-art.html
+++ b/net-art.html
@@ -20,8 +20,8 @@
      <li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
      <li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme</a></li>
      <li class="nav-item"><a class="nav-link" href="minecraft-sculpture.html">Minecraft</a></li>
-     <li class="nav-item"><a class="nav-link active" href="3d-print.html">3D Print</a></li>
-     <li class="nav-item"><a class="nav-link" href="net-art.html">Net.art</a></li>
+     <li class="nav-item"><a class="nav-link" href="3d-print.html">3D Print</a></li>
+     <li class="nav-item"><a class="nav-link active" href="net-art.html">Net.art</a></li>
   </ul> 
 </nav>
 
