--- a/3d-print.html
+++ b/3d-print.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 
-<div class="container-fluid pt-3 pb-3">
-  <h1 class="text-center display-5">Olivia Joy's Portfolio</h1>
+<div class="container-fluid pt-2">
+  <h1 class="text-center">Olivia Joy</h1>
 </div>
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center sticky-top">
   <ul class="navbar-nav">
      <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
      <li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
@@ -25,14 +25,18 @@
   </ul> 
 </nav>
 
-<div class="container-fluid pt-3 pb-3 bg-74">
+<div class="container-fluid pt-3 pb-3 bg-74 text-light">
 
   <h1 class="text-center">3D Print</h1>
 
   <hr>
   <p>
-  The objective of this project was to export the Minecraft Sculpture as an STL file using a software called Mineways and prepare it for a 3D Print using the printer's software. Using the 3D printer's software, I added scaffolding to the edges so that it had support underneath. I first did small print was as a draft to understand how the sculpture should be rebuilt better if needed. Then I did a final print which was much larger to show the details of the sculpture. My final print of the Iron man helmet took almost 7 hours and came out to be about 3 inches tall. To finish the piece, I removed the scaffolding, filed down the rough edges, and painted it with acrylic paint.
+  The objective of this project was to export the Minecraft Sculpture as an STL file and prepare it for a 3D print. The softwares used were Mineways to create the STL file and FlashPrint to prepare the print with scaffolding. A small draft print was done first to determine how the sculpture should be rebuilt if needed. Then, a final print was done much larger to show the details. 
   </p>
+  <p>
+  My final print of the Ironman helmet took alomst 7 hours to print and it came out to be 3 inches tall. I finished my sculpture by filing down the rough edges, coating it with a clear primer spray paint, and painting it with acrylic paint.
+  </p>
+
   <hr>
 
   <div class="row pb-4">
