--- a/glitch-art.html
+++ b/glitch-art.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 
-<div class="container-fluid pt-3 pb-3">
-  <h1 class="text-center display-5">Olivia Joy's Portfolio</h1>
+<div class="container-fluid pt-2">
+  <h1 class="text-center">Olivia Joy</h1>
 </div>
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center sticky-top">
   <ul class="navbar-nav">
      <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
      <li class="nav-item"><a class="nav-link active" href="glitch-art.html">Glitch</a></li>
@@ -25,18 +25,17 @@
   </ul> 
 </nav>
 
-<div class="container-fluid pt-3 pb-3 bg-74">
+<div class="container-fluid pt-3 pb-3 bg-74 text-light">
 
   <h1 class="text-center">Glitch Art</h1>
 
   <hr>
   <p>
-  Glitch Art is doing something unfamiliar with a piece of technology that you are familiar with. I made the following glitches by taking the familiar .jpg image file and made changes to the image using Audacity and TextEdit. Audacity is an audio editing software and TextEdit is a text editing software.
+  Glitch Art is doing something unfamiliar with a piece of technology that you are familiar with. I made the following glitches by editing a .jpeg image file with either an audio editing or a text editing software. The audio editor I used was called Audacity and the text editor I used was called TextEdit.
   </p>
 
   <p>
-  This series of images are related through the theme of fast food. I choose images from In-N-Out, Carl's Jr, and McDonalds because these are some of my favorite fast food places. Fast food advertisements always show their burgers and other food as perfectly put together, and they make it look as appealing as possible.
-These glitches represent how the food in real life never actually looks like it does in the commercials. The glitch of fast food also represents the way that some people see fast food as unhealthy, but I left the images with a pleasing aesthetic because I personally still enjoy eating fast food anyway.
+  This series of images are related through the theme of fast food. Fast food advertisements always show their burgers and other food items as perfectly put together, and they make it look as appealing as possible. These glitches represent how the food in real life never actually looks like it does in the commercials. The glitch of fast food also represents the way that fast food is seen as unhealthy. However, I still left the images with a pleasing aesthetic because many people, including myself, enjoy eating fast food anyway.
   </p>
   <hr>
 
