--- a/meme-mashup.html
+++ b/meme-mashup.html
@@ -11,11 +11,11 @@
 
 <body>
 
-<div class="container-fluid pt-3 pb-3">
-  <h1 class="text-center display-5">Olivia Joy's Portfolio</h1>
+<div class="container-fluid pt-2">
+  <h1 class="text-center">Olivia Joy</h1>
 </div>
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center sticky-top">
   <ul class="navbar-nav">
      <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
      <li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
@@ -26,7 +26,7 @@
   </ul> 
 </nav>
 
-<div class="container-fluid pt-3 pb-3 bg-74">
+<div class="container-fluid pt-3 pb-3 bg-74 text-light">
 
   <h1 class="text-center">Meme Mashup</h1>
 
@@ -40,7 +40,7 @@
     <div class="col-sm-8">
       <img src="images/meme/meme-mashup.png" class="img-fluid mx-auto d-block" alt="Mashup image of the evil Kermit, disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
     </div>
-    <div class="col-sm-4">The base of this mashup is the disaster girl meme, and she is now the evil Kermit. The Elmo on her shoulder is supporting her in the chaos of the fire while the regular Kermit watches the woman and Spongebob who just escaped the building.
+    <div class="col-sm-4"><p>The base of this mashup is the disaster girl meme, and she takes the place of evil Kermit. The Elmo on her shoulder is supporting her in the chaos while the woman and Spongebob just escaped the building.</p>
     </div>
   </div>
 
@@ -48,7 +48,7 @@
     <div class="col-sm-8">
       <img src="images/meme/meme-mashup1-2.png" class="img-fluid mx-auto d-block" alt="Mashup image of the disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
     </div>
-    <div class="col-sm-4">A version of the above without the evil Kermit meme. Both Spongebob and the woman escape the fire. The woman wonders if the child is responsible for the fire. Rising Elmo in his element.
+    <div class="col-sm-4"><p>A version of the above mashup without the evil Kermit meme. Both Spongebob and the woman escape the fire. The woman wonders if the child is responsible for the fire. Rising Elmo is in his element.</p>
     </div>
   </div>
 
@@ -56,7 +56,7 @@
     <div class="col-sm-8">
       <img src="images/meme/meme-mashup3.png" class="img-fluid mx-auto d-block" alt="Mashup image of the woman squinting, suprised Pikachu, and the cat from the woman yelling at a cat meme">
     </div>
-    <div class="col-sm-4">The cat and the suprised Pikachu look similar. The woman is trying to tell the difference between them.
+    <div class="col-sm-4"><p>The cat and Pikachu have similar expressions. The woman is trying to tell the difference between them.</p>
     </div>
   </div>
 
