--- a/minecraft-sculpture.html
+++ b/minecraft-sculpture.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 
-<div class="container-fluid pt-3 pb-3">
-  <h1 class="text-center display-5">Olivia Joy's Portfolio</h1>
+<div class="container-fluid pt-2">
+  <h1 class="text-center">Olivia Joy</h1>
 </div>
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center sticky-top">
   <ul class="navbar-nav">
      <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
      <li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
@@ -25,20 +25,20 @@
   </ul> 
 </nav>
 
-<div class="container-fluid pt-3 pb-3 bg-74">
+<div class="container-fluid pt-3 pb-3 bg-74 text-light">
 
   <h1 class="text-center">Minecraft Sculpture</h1>
 
   <hr>
   <p>
-  The objective of this project was to use a virtual environment to design a sculpture representing an object of cultural significance. The sculpture was also created with the idea in mind that it would later be 3D printed.
+  The objective of this project was to use a virtual environment to design a sculpture representing an object of cultural significance. The sculpture was also created with the idea in mind that it would be 3D printed in the next project.
   </p>
   <hr>
 
   <h2>Iron Man Helmet</h2>
 
   <p>
-  I created a sculpture of the Iron Man helmet because it represents Marvel, which I am a big fan of. It is culturally significant because many people around the world have grown up watching the Marvel movies and/or reading the comic books. Marvel has been a big influence in pop culture, and it continues to be as they release new movies and shows.
+  I created a sculpture of the Iron Man helmet because it represents Marvel, which I am a big fan of. It is culturally significant because many people around the world have grown up watching the Marvel movies and/or reading the comic books. Marvel has been a big influence in pop culture, and it continues to be today as they release new movies and shows.
   </p>
 
   <div class="row pb-4">
