--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 <body>
 
-<div class="container-fluid pt-3 pb-3">
-  <h1 class="text-center display-5">Olivia Joy's Portfolio</h1>
+<div class="container-fluid pt-2">
+  <h1 class="text-center">Olivia Joy</h1>
 </div>
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center sticky-top">
   <ul class="navbar-nav">
      <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
      <li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
@@ -26,12 +26,12 @@
   </ul> 
 </nav>
 
-<div class="container-fluid pt-3 bg-74 text-center">
+<div class="container-fluid pt-3 bg-74 text-center text-light">
 
   <h1>Art 74 Projects</h1>
 
   <p>
-  See my recent projects from my Digital Media Art class. Click each image to see more from that project.
+  See my recent projects from my Digital Media Art class. Click an image or use the Nav bar to see more from each project.
   </p>
 
   <div class="row pb-4">
@@ -77,11 +77,11 @@
 
 </div>
 
-<div class="container-fluid pt-3 pb-3 text-bg-light">
+<div class="container-fluid pt-4 pb-5 text-bg-light">
 
   <h2>About Me</h2>
   <p>
-  My name is Olivia Joy Cacdac and I am a Computer Science major at San Jose State University. I am also a beginner New Media Artist. Through my Intro to Digital Media Art class, I've had the opportunity to explore and create New Media Art using various tools, such as Adobe Photoshop and 3D printing softwares.
+  My name is Olivia Joy Cacdac. I attend San Jose State University as a Computer Science major, with a minor in Digital Media Art. Through my Intro to Digital Media Art class, I've had the opportunity to explore and create New Media Art using various tools, such as Adobe Photoshop and 3D printing softwares.
   </p>
 
 </div>
