--- a/net-art.html
+++ b/net-art.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 
-<div class="container-fluid pt-3 pb-3">
-  <h1 class="text-center display-5">Olivia Joy's Portfolio</h1>
+<div class="container-fluid pt-2">
+  <h1 class="text-center">Olivia Joy</h1>
 </div>
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center sticky-top">
   <ul class="navbar-nav">
      <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
      <li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
@@ -25,7 +25,7 @@
   </ul> 
 </nav>
 
-<div class="container-fluid pt-3 pb-3 bg-74">
+<div class="container-fluid pt-3 pb-3 bg-74 text-light">
 
   <h1 class="text-center">Net.art</h1>
 
@@ -35,7 +35,8 @@
   </p>
 
   <p>
-  Below are preview screenshots of the first two pages of my Net art. Visit my Net art site at <a href="net-art-74/index.html">https://oliviajoyyy.github.io/net-art-74/</a>
+  Below are preview screenshots of the first two pages of my Net art. Visit my Net art site at 
+  <a href="net-art-74/index.html" class="text-success">https://oliviajoyyy.github.io/net-art-74/</a>
   </p>
   <hr>
 
