Add p5.js self-portrait

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <div class="col-sm-5">
       <a href="meme-mashup.html">
-        <img src="images/meme/meme-mashup.png" class="img-fluid mx-auto d-block" alt="Mashup image of the evil Kermit, disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
+        <img src="images/meme/meme-mashup.png" class="img-fluid mx-auto d-block" alt="Meme Mashup">
       </a>
     </div>
     <div class="col-sm-1"></div>
@@ -53,12 +53,12 @@
     <div class="col-sm-1"></div>
     <div class="col-sm-5">
       <a href="minecraft-sculpture.html">
-        <img src="images/minecraft/ironman-left-angle.png" class="img-fluid mx-auto d-block" alt="A sculpture made in Minecraft of Ironman's helmet">
+        <img src="images/minecraft/ironman-left-angle.png" class="img-fluid mx-auto d-block" alt="Ironman helmet Minecraft sculpture">
       </a>
     </div>
     <div class="col-sm-5">
       <a href="3d-print.html">
-        <img src="images/3d/3d-ironman-helmet.png" class="img-fluid mx-auto d-block" alt="3D printed sculpture of Ironman's helmet">
+        <img src="images/3d/3d-ironman-helmet.png" class="img-fluid mx-auto d-block" alt="3D print of Ironman helmet">
       </a>
     </div>
     <div class="col-sm-1"></div>
@@ -68,10 +68,14 @@
     <div class="col-sm-1"></div>
     <div class="col-sm-5">
       <a href="net-art.html">
-        <img src="images/net-art/begin-your-adventure.png" class="img-fluid mx-auto d-block" alt="The first page of Olivia's Net art website. The page title is Begin Your Nature Adventure">
+        <img src="images/net-art/begin-your-adventure.png" class="img-fluid mx-auto d-block" alt="First page of Net.art">
       </a>
     </div>
-    <div class="col-sm-5"></div>
+    <div class="col-sm-5">
+      <a href="p5js-self-portrait.html">
+        <img src="images/p5js/self-portrait.png" class="img-fluid mx-auto d-block" alt="p5.js self-portrait">
+      </a>
+    </div>
     <div class="col-sm-1"></div>
   </div>
 
