--- a/diyps-aliens.html
+++ b/diyps-aliens.html
@@ -266,7 +266,7 @@ function saveme(){
 }
 </pre>
     </div>
-    <div class="col-lg"><p>My drawing:</p>
+    <div class="col-md"><p>My drawing:</p>
     <img src="images/p5js/ojmc2213250.jpg" class="img-fluid" alt="Drawing tool key">
     </div>
   </div>
