--- a/diyps-aliens.html
+++ b/diyps-aliens.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>P5.js Self-Portrait | Olivia Joy</title>
+<title>DIY Photoshop Aliens | Olivia Joy</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
   </div>
 
   <div class="row">
-    <div class="col"><p>p5js Code:</p>
+    <div class="col"><p>p5.js Code:</p>
     <pre style="white-space: pre-wrap;">
 var starsY, people, cow1, cow2, grass;
 var initials ='ojmc';
@@ -112,7 +112,7 @@ function newkeyChoice(toolChoice) {
     line(mouseX, mouseY, pmouseX, pmouseY);
   }
   else if (toolChoice == '4') {
-    // Space ship
+    // Spaceship
     stroke(147, 245, 230, 50);
     strokeWeight(1);
     fill(147, 245, 230, 50);
@@ -129,7 +129,7 @@ function newkeyChoice(toolChoice) {
     alien(0, 255, 0); // green alien
   }
   else if (toolChoice == '6') {
-    // Space ship cap
+    // Spaceship cap
     stroke(0);
     strokeWeight(1);
     fill(150, 150, 150, 30);
@@ -137,7 +137,7 @@ function newkeyChoice(toolChoice) {
     arc(mouseX, mouseY+45, 140, 40, 0, PI);
   }
   else if (toolChoice == '7') {
-    // Space ship lights
+    // Spaceship lights
     stroke(0);
     strokeWeight(2);
     fill(245, 245, 147);
