--- a/diyps-aliens.html
+++ b/diyps-aliens.html
@@ -31,7 +31,7 @@
 
   <hr>
   <p>
-  The purpose of this tool is to help people draw a scene of aliens and its spaceship. It is meant to be a fun drawing tool where one can set the scene of the night sky and then draw in the spaceships and levitating cows. This drawing tool was created using p5js code.
+  The purpose of this tool is to help people draw a scene of aliens and its spaceship. It is meant to be a fun drawing tool where one can set the scene of the night sky and then draw in the spaceships and levitating cows. This drawing tool was created using p5.js code.
   </p>
   <hr>
 
@@ -39,7 +39,9 @@
     <div class="col"><p>Draw here:</p>
     <iframe src="diyps_aliens/index.html" height="605" width="605" title="DIY Photoshop - Aliens"></iframe></div>
     <div class="col-lg"><p>Key:</p>
-    <img src="images/p5js/diyps-aliens-key.png" style="width: 500px" alt="Drawing tool key"></div>
+    <img src="images/p5js/diyps-aliens-key.png" style="width: 500px" alt="Drawing tool key">
+    <p> x || X : Clear the screen <br> p || P : Save a screenshot of the Canvas</p>
+    </div>
   </div>
 
   <div class="row">
