Update page layout - self portrait, game

--- a/game-dog-playtime.html
+++ b/game-dog-playtime.html
@@ -31,11 +31,13 @@
 
   <hr>
   <p>
-  This game was created using p5.js code. This is a game where you can use different items to play with the dog. It's simple and intended to be played for fun without a way to "win" or "lose." However, there is a small challenge in finding which item the dog will play with in each level by using the selection bar.
+  This is a game where you can use different items to play with the dog. It's intended to be played for fun without a way to "win" or "lose" but to make the game more interesting, there is a small challenge in finding which items the dog will play with in each level. There's 5 items you can choose from in the selection bar. You can also restart anytime by clicking the restart button.
   </p>
   <hr>
 
-  <iframe src="game_dog_playtime/index.html" height="650" width="800" title="Game - Dog Playtime"></iframe>
+  <center>
+  <iframe src="game_dog_playtime/index.html" style="center" height="650" width="795" title="Game - Dog Playtime"></iframe>
+  <center>
 
   <br>
 
