--- a/p5js-self-portrait.html
+++ b/p5js-self-portrait.html
@@ -30,12 +30,14 @@
   <h1 class="text-center">p5.js Self-Portrait</h1>
 
   <hr>
-  <p>
+  <p class="text-center">
   This is a self-portrait created using p5.js code.
   </p>
   <hr>
 
+  <center>
   <iframe src="self_portrait/index.html" height="605" width="605" title="Self-portrait"></iframe>
+  </center>
 
   <br>
 
@@ -344,7 +346,6 @@ function draw() {
   endShape();
 }
 </pre>
-
 
 </div>
 
