Update page layout - dog game

--- a/game-dog-playtime.html
+++ b/game-dog-playtime.html
@@ -36,8 +36,8 @@
   <hr>
 
   <center>
-  <iframe src="game_dog_playtime/index.html" style="center" height="650" width="795" title="Game - Dog Playtime"></iframe>
-  <center>
+  <iframe src="game_dog_playtime/index.html" style="center" height="645" width="800" title="Game - Dog Playtime"></iframe>
+  </center>
 
   <br>
 
