Update portfolio layout

--- a/glitch-art.html
+++ b/glitch-art.html
@@ -22,6 +22,15 @@
      <li class="nav-item"><a class="nav-link" href="minecraft-sculpture.html">Minecraft</a></li>
      <li class="nav-item"><a class="nav-link" href="3d-print.html">3D Print</a></li>
      <li class="nav-item"><a class="nav-link" href="net-art.html">Net.art</a></li>
+     <li class="nav-item dropdown">
+       <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">p5.js</a>
+       <ul class="dropdown-menu">
+         <li><a class="dropdown-item" href="p5js-self-portrait.html">Self-Portrait</a></li>
+         <li><a class="dropdown-item" href="diyps-aliens.html">DIY PS - Aliens</a></li>
+         <li><a class="dropdown-item" href="game-dog-playtime.html">Game - Dog</a></li>
+         <li><a class="dropdown-item" href="game-ghost.html">Game - Ghost</a></li>
+       </ul>
+     </li>
   </ul> 
 </nav>
 
@@ -30,11 +39,11 @@
   <h1 class="text-center">Glitch Art</h1>
 
   <hr>
-  <p>
+  <p class="stmt">
   Glitch Art is doing something unfamiliar with a piece of technology that you are familiar with. I made the following glitches by editing a .jpeg image file with either an audio editing or a text editing software. The audio editor I used was called Audacity and the text editor I used was called TextEdit.
   </p>
 
-  <p>
+  <p class="stmt">
   This series of images are related through the theme of fast food. Fast food advertisements always show their burgers and other food items as perfectly put together, and they make it look as appealing as possible. These glitches represent how the food in real life never actually looks like it does in the commercials. The glitch of fast food also represents the way that fast food is seen as unhealthy. However, I still left the images with a pleasing aesthetic because many people, including myself, enjoy eating fast food anyway.
   </p>
   <hr>
