--- a/minecraft-sculpture.html
+++ b/minecraft-sculpture.html
@@ -22,6 +22,15 @@
      <li class="nav-item"><a class="nav-link active" href="minecraft-sculpture.html">Minecraft</a></li>
      <li class="nav-item"><a class="nav-link" href="3d-print.html">3D Print</a></li>
      <li class="nav-item"><a class="nav-link" href="net-art.html">Net.art</a></li>
+     <li class="nav-item dropdown">
+       <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">p5.js</a>
+       <ul class="dropdown-menu">
+         <li><a class="dropdown-item" href="p5js-self-portrait.html">Self-Portrait</a></li>
+         <li><a class="dropdown-item" href="diyps-aliens.html">DIY PS - Aliens</a></li>
+         <li><a class="dropdown-item" href="game-dog-playtime.html">Game - Dog</a></li>
+         <li><a class="dropdown-item" href="game-ghost.html">Game - Ghost</a></li>
+       </ul>
+     </li>
   </ul> 
 </nav>
 
@@ -30,14 +39,14 @@
   <h1 class="text-center">Minecraft Sculpture</h1>
 
   <hr>
-  <p>
+  <p class="stmt">
   The objective of this project was to use a virtual environment to design a sculpture representing an object of cultural significance. The sculpture was also created with the idea in mind that it would be 3D printed in the next project.
   </p>
   <hr>
 
-  <h2>Iron Man Helmet</h2>
+  <h2 class="stmt">Iron Man Helmet</h2>
 
-  <p>
+  <p class="stmt">
   I created a sculpture of the Iron Man helmet because it represents Marvel, which I am a big fan of. It is culturally significant because many people around the world have grown up watching the Marvel movies and/or reading the comic books. Marvel has been a big influence in pop culture, and it continues to be today as they release new movies and shows.
   </p>
 
@@ -65,9 +74,9 @@
 
   <hr>
 
-  <h2>Baby Groot</h2>
+  <h2 class="stmt">Baby Groot</h2>
 
-  <p>
+  <p class="stmt">
   I built this sculpture of Baby Groot from Guardians of the Galaxy Vol. 2 because it was another way to represent Marvel. Moveover, the cultural significance of Baby Groot is about how his adorablness from the movie captured many people's attention.
   </p>
 
