--- a/net-art.html
+++ b/net-art.html
@@ -22,6 +22,15 @@
      <li class="nav-item"><a class="nav-link" href="minecraft-sculpture.html">Minecraft</a></li>
      <li class="nav-item"><a class="nav-link" href="3d-print.html">3D Print</a></li>
      <li class="nav-item"><a class="nav-link active" href="net-art.html">Net.art</a></li>
+     <li class="nav-item dropdown">
+       <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">p5.js</a>
+       <ul class="dropdown-menu">
+         <li><a class="dropdown-item" href="p5js-self-portrait.html">Self-Portrait</a></li>
+         <li><a class="dropdown-item" href="diyps-aliens.html">DIY PS - Aliens</a></li>
+         <li><a class="dropdown-item" href="game-dog-playtime.html">Game - Dog</a></li>
+         <li><a class="dropdown-item" href="game-ghost.html">Game - Ghost</a></li>
+       </ul>
+     </li>
   </ul> 
 </nav>
 
@@ -30,11 +39,11 @@
   <h1 class="text-center">Net.art</h1>
 
   <hr>
-  <p>
+  <p class="stmt">
   The objective of this project was to create a series of pages with links, text, and images to tell a story or experience in a poetic, modern, hypertext way. My website is a fun little experience with nature. It shows that different paths can led you to different parts of nature, where there will be various things to see. The idea is that you can choose to look around and explore your surroundings wherever you are in nature to see what it has to offer.
   </p>
 
-  <p>
+  <p class="stmt">
   Below are preview screenshots of the first two pages of my Net art. Visit my Net art site at 
   <a href="net-art-74/index.html" class="text-success">https://oliviajoyyy.github.io/net-art-74/</a>
   </p>
