--- a/3d-print.html
+++ b/3d-print.html
@@ -22,6 +22,15 @@
      <li class="nav-item"><a class="nav-link" href="minecraft-sculpture.html">Minecraft</a></li>
      <li class="nav-item"><a class="nav-link active" href="3d-print.html">3D Print</a></li>
      <li class="nav-item"><a class="nav-link" href="net-art.html">Net.art</a></li>
+     <li class="nav-item dropdown">
+       <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">p5.js</a>
+       <ul class="dropdown-menu">
+         <li><a class="dropdown-item" href="p5js-self-portrait.html">Self-Portrait</a></li>
+         <li><a class="dropdown-item" href="diyps-aliens.html">DIY PS - Aliens</a></li>
+         <li><a class="dropdown-item" href="game-dog-playtime.html">Game - Dog</a></li>
+         <li><a class="dropdown-item" href="game-ghost.html">Game - Ghost</a></li>
+       </ul>
+     </li>
   </ul> 
 </nav>
 
@@ -30,10 +39,10 @@
   <h1 class="text-center">3D Print</h1>
 
   <hr>
-  <p>
+  <p class="stmt">
   The objective of this project was to export the Minecraft Sculpture as an STL file and prepare it for a 3D print. The softwares used were Mineways to create the STL file and FlashPrint to prepare the print with scaffolding. A small draft print was done first to determine how the sculpture should be rebuilt if needed. Then, a final print was done much larger to show the details. 
   </p>
-  <p>
+  <p class="stmt">
   My final print of the Ironman helmet took alomst 7 hours to print and it came out to be 3 inches tall. I finished my sculpture by filing down the rough edges, coating it with a clear primer spray paint, and painting it with acrylic paint.
   </p>
 
