--- a/game-ghost.html
+++ b/game-ghost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>DIY Photoshop Aliens | Olivia Joy</title>
+<title>Game - Ghost | Olivia Joy</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -26,9 +26,9 @@
        <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown">p5.js</a>
        <ul class="dropdown-menu">
          <li><a class="dropdown-item" href="p5js-self-portrait.html">Self-Portrait</a></li>
-         <li><a class="dropdown-item active" href="diyps-aliens.html">DIY PS - Aliens</a></li>
+         <li><a class="dropdown-item" href="diyps-aliens.html">DIY PS - Aliens</a></li>
          <li><a class="dropdown-item" href="game-dog-playtime.html">Game - Dog</a></li>
-         <li><a class="dropdown-item" href="game-ghost.html">Game - Ghost</a></li>
+         <li><a class="dropdown-item active" href="game-ghost.html">Game - Ghost</a></li>
        </ul>
      </li>
   </ul> 
@@ -36,38 +36,23 @@
 
 <div class="container-fluid pt-3 pb-3 bg-74 text-light">
 
-  <h1 class="text-center">DIY Photoshop - Aliens</h1>
+  <h1 class="text-center">Game - Ghost</h1>
 
   <hr>
   <p class="stmt">
-  The purpose of this tool is to help people draw a scene of aliens and its spaceship. It is meant to be a fun drawing tool where one can set the scene of the night sky and then draw in the spaceships and levitating cows. This drawing tool was created using p5.js code.
+  This is a placeholder for my Art-74 final project.
   </p>
   <hr>
 
-  <div class="row pb-5">
-    <div class="col-1"></div>
-    <div class="col"><p>Draw here:</p>
-      <iframe src="diyps_aliens/index.html" height="605" width="605" title="DIY Photoshop - Aliens"></iframe>
-    </div>
-    <div class="col-lg"><p>Key:</p>
-      <img src="images/p5js/diyps-aliens-key.png" class="img-fluid" alt="Drawing tool key">
-      <p> x || X : Clear the screen <br> p || P : Save a screenshot of the Canvas</p>
-    </div>
-    <div class="col-1"></div>
-  </div>
-
-  <div class="row">
-    <div class="col-1"></div>
-    <div class="col"><p>p5.js Code:</p>
-      <iframe src="diyps_aliens/diyps_aliens.js" style="background-color: white" height="605" width="605" title="DIY PS Code"></iframe>
-    </div>
-    <div class="col-lg"><p>My drawing:</p>
-      <img src="images/p5js/ojmc2213250.jpg" class="img-fluid" alt="Drawing tool key">
-    </div>
-    <div class="col-1"></div>
-  </div>
-
+<!--
+  <center>
+  <iframe src="game_ghost/index.html" height="645" width="800" title="Game - Dog Playtime"></iframe>
+  
   <br>
+  
+  <iframe src="game_ghost/game_ghost.js" style="background-color: white" height="645" width="800" title="Game code"></iframe>
+  </center>
+-->
 
 </div>
 
