--- a/index.html
+++ b/index.html
@@ -16,29 +16,88 @@
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center sticky-top">
-  <ul class="navbar-nav">
+ <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+ </button>
+ <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+   <ul class="navbar-nav">
      <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
      <li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
      <li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme</a></li>
      <li class="nav-item"><a class="nav-link" href="minecraft-sculpture.html">Minecraft</a></li>
      <li class="nav-item"><a class="nav-link" href="3d-print.html">3D Print</a></li>
      <li class="nav-item"><a class="nav-link" href="net-art.html">Net.art</a></li>
-  </ul> 
+     <li class="nav-item dropdown">
+       <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">p5.js</a>
+       <ul class="dropdown-menu">
+         <li><a class="dropdown-item" href="p5js-self-portrait.html">Self-Portrait</a></li>
+         <li><a class="dropdown-item" href="diyps-aliens.html">DIY PS - Aliens</a></li>
+         <li><a class="dropdown-item" href="game-dog-playtime.html">Game - Dog</a></li>
+         <li><a class="dropdown-item" href="game-ghost.html">Game - Ghost</a></li>
+       </ul>
+     </li>
+   </ul> 
+ </div>
 </nav>
 
 <div class="container-fluid pt-3 bg-74 text-center text-light">
 
-  <h1>Art 74 Projects</h1>
+  <h1>Portfolio</h1>
 
   <p>
-  See my recent projects from my Digital Media Art class. Click an image or use the Nav bar to see more from each project.
+  Click an image or use the navbar to see more from each project.
   </p>
 
-  <div class="row pb-4">
+  <div class="row pb-4 align-items-center">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-5">
+      <a href="net-art.html">
+        <img src="images/p5js/ojmc2213250.jpg" class="img-fluid mx-auto d-block" alt="diyps Aliens">
+      </a>
+    </div>
+    <div class="col-sm-5">
+      <a href="p5js-self-portrait.html">
+        <img src="images/p5js/game-dog-playtime.jpg" class="img-fluid mx-auto d-block" alt="Game - Dog Playtime">
+      </a>
+    </div>
+    <div class="col-sm-1"></div>
+  </div>
+
+  <div class="row pb-4 align-items-center">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-5">
+      <a href="net-art.html">
+        <img src="images/net-art/begin-your-adventure.png" class="img-fluid mx-auto d-block" alt="Net.art page 1">
+      </a>
+    </div>
+    <div class="col-sm-5">
+      <a href="p5js-self-portrait.html">
+        <img src="images/p5js/self-portrait.png" class="img-fluid mx-auto d-block" alt="p5.js Self-portrait">
+      </a>
+    </div>
+    <div class="col-sm-1"></div>
+  </div>
+
+  <div class="row pb-4 align-items-center">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-5">
+      <a href="minecraft-sculpture.html">
+        <img src="images/minecraft/ironman-left-angle.png" class="img-fluid mx-auto d-block" alt="Ironman helmet Minecraft sculpture">
+      </a>
+    </div>
+    <div class="col-sm-5">
+      <a href="3d-print.html">
+        <img src="images/3d/3d-ironman-helmet.png" class="img-fluid mx-auto d-block" alt="Ironman helmet 3D print">
+      </a>
+    </div>
+    <div class="col-sm-1"></div>
+  </div>
+
+  <div class="row pb-4 align-items-center">
     <div class="col-sm-1"></div>
     <div class="col-sm-5">
       <a href="glitch-art.html">
-        <img src="images/glitch/in-n-out-glitch-exterior.png" class="img-fluid mx-auto d-block" alt="In-N-Out exterior glitched image">
+        <img src="images/glitch/in-n-out-glitch-exterior.png" class="img-fluid mx-auto d-block" alt="In-N-Out Glitch">
       </a>
     </div>
     <div class="col-sm-5">
@@ -49,43 +108,13 @@
     <div class="col-sm-1"></div>
   </div>
 
-  <div class="row pb-4">
-    <div class="col-sm-1"></div>
-    <div class="col-sm-5">
-      <a href="minecraft-sculpture.html">
-        <img src="images/minecraft/ironman-left-angle.png" class="img-fluid mx-auto d-block" alt="Ironman helmet Minecraft sculpture">
-      </a>
-    </div>
-    <div class="col-sm-5">
-      <a href="3d-print.html">
-        <img src="images/3d/3d-ironman-helmet.png" class="img-fluid mx-auto d-block" alt="3D print of Ironman helmet">
-      </a>
-    </div>
-    <div class="col-sm-1"></div>
-  </div>
-
-  <div class="row pb-4">
-    <div class="col-sm-1"></div>
-    <div class="col-sm-5">
-      <a href="net-art.html">
-        <img src="images/net-art/begin-your-adventure.png" class="img-fluid mx-auto d-block" alt="First page of Net.art">
-      </a>
-    </div>
-    <div class="col-sm-5">
-      <a href="p5js-self-portrait.html">
-        <img src="images/p5js/self-portrait.png" class="img-fluid mx-auto d-block" alt="p5.js self-portrait">
-      </a>
-    </div>
-    <div class="col-sm-1"></div>
-  </div>
-
 </div>
 
 <div class="container-fluid pt-4 pb-5 text-bg-light">
 
-  <h2>About Me</h2>
-  <p>
-  My name is Olivia Joy Cacdac. I attend San Jose State University as a Computer Science major, with a minor in Digital Media Art. Through my Intro to Digital Media Art class, I've had the opportunity to explore and create New Media Art using various tools, such as Adobe Photoshop and 3D printing softwares.
+  <h2 class="stmt">About Me</h2>
+  <p class="stmt">
+  My name is Olivia Joy Cacdac. I attend San Jose State University as a Computer Science major, with a minor in Digital Media Art. Through my Intro to Digital Media Art class, I've had the opportunity to explore and create New Media Art through various means such as glitching, 3D printing, and coding.
   </p>
 
 </div>
