--- a/meme-mashup.html
+++ b/meme-mashup.html
@@ -23,6 +23,15 @@
      <li class="nav-item"><a class="nav-link" href="minecraft-sculpture.html">Minecraft</a></li>
      <li class="nav-item"><a class="nav-link" href="3d-print.html">3D Print</a></li>
      <li class="nav-item"><a class="nav-link" href="net-art.html">Net.art</a></li>
+     <li class="nav-item dropdown">
+       <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">p5.js</a>
+       <ul class="dropdown-menu">
+         <li><a class="dropdown-item" href="p5js-self-portrait.html">Self-Portrait</a></li>
+         <li><a class="dropdown-item" href="diyps-aliens.html">DIY PS - Aliens</a></li>
+         <li><a class="dropdown-item" href="game-dog-playtime.html">Game - Dog</a></li>
+         <li><a class="dropdown-item" href="game-ghost.html">Game - Ghost</a></li>
+       </ul>
+     </li>
   </ul> 
 </nav>
 
@@ -31,7 +40,7 @@
   <h1 class="text-center">Meme Mashup</h1>
 
   <hr>
-  <p>
+  <p class="stmt">
   A meme mashup creates something new and meaningful from the source memes. Each individual meme used in the mashup has is own meaning and when combined, the mashup as a whole piece creates a new meaning. I used Adobe Photoshop to create the mashups.
   </p>
   <hr>
